NF: Implement a rician noise correction

--- a/test_overcomplete.ipynb
+++ b/test_overcomplete.ipynb
@@ -27,7 +27,8 @@
     "\n",
     "from pca_utils import (rfiw_phantom, mp_distribution,\n",
     "                       fiber_segments_phantom, evaluate_directions,\n",
-    "                       evaluate_metric, pca_noise_classifier)"
+    "                       evaluate_metric, pca_noise_classifier,\n",
+    "                       pca_denoising)"
    ]
   },
   {
