RF: Measuring gain in test_overcomplete_gain.ipynb

--- a/rician_correction_test.ipynb
+++ b/rician_correction_test.ipynb
@@ -198,6 +198,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def add_rician_bias(dwi, sigma):\n",
+    "    \"\"\" Add rician bias of a noise free data given a noise std value\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dwi : array\n",
+    "        Matrix containing the noise free data.\n",
+    "    sigma : float\n",
+    "        Estimate of the noise std\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dwib : array ([X, Y, Z, g])\n",
+    "        Matrix containing the biased version of the 4D data.\n",
+    "    \"\"\"\n",
+    "    snr = dwi.copy() / sigma\n",
+    "    return sigma * _normalized_rician_expected_value(snr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {
     "collapsed": false
